scripts/nullaway/annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8.txt
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1342: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:144: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:208: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:148: error: [NullAway] dereferenced expression representation is @Nullable
			v = new Vehicule(representation.getJsonObject());
			                               ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:234: error: [NullAway] dereferenced expression representation is @Nullable
			d = new DemandeMoyen(representation.getJsonObject());
			                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:322: error: [NullAway] dereferenced expression representation is @Nullable
			s = new Source(representation.getJsonObject());
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:411: error: [NullAway] dereferenced expression representation is @Nullable
			c = new Cible(representation.getJsonObject());
			                            ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:498: error: [NullAway] dereferenced expression representation is @Nullable
			a = new Action(representation.getJsonObject());
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/api/InterventionConnection.java:584: error: [NullAway] dereferenced expression representation is @Nullable
			i = new Implique(representation.getJsonObject());
			                               ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/sign/AbstractModel.java:67: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return uniqueID;
		^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Vehicule.java:42: error: [NullAway] initializer method does not guarantee @NonNull field etat (line 37) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Vehicule() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Vehicule.java:112: error: [NullAway] dereferenced expression this.categorie is @Nullable
		json.put("categorie", this.categorie.name());
		                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/DemandeMoyen.java:100: error: [NullAway] dereferenced expression this.categorie is @Nullable
		json.put("categorie", this.categorie.name());
		                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Agent.java:64: error: [NullAway] dereferenced expression aptitude is @Nullable
		json.put("aptitude", aptitude.name());
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Action.java:55: error: [NullAway] dereferenced expression actionType is @Nullable
		json.put("actionType", actionType.name());
		                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Groupe.java:61: error: [NullAway] dereferenced expression chef is @Nullable
		json.put("chef", chef.toJSON());
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Groupe.java:78: error: [NullAway] dereferenced expression vehicules is @Nullable
		if(!vehicules.isEmpty() && vehicules.get(0) != null){
		             ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Caserne.java:28: error: [NullAway] dereferenced expression vehicules is @Nullable
				vehicules.add(new Vehicule(jsar.getJSONObject(i)));
				         ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/common/model/impl/Caserne.java:45: error: [NullAway] dereferenced expression vehicules is @Nullable
		if (!vehicules.isEmpty()) {
		              ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/model/test/MessageTest.java:32: error: [NullAway] dereferenced expression m2 is @Nullable
		assertTrue((m1.getUniqueID() == m2.getUniqueID()) && (m1.getMessage() == m2.getMessage()));
		                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url21b471891f_Agetac_Model_tgz-pJ8-org_json_TestJ8/src/org/agetac/model/test/AgentTest.java:44: error: [NullAway] dereferenced expression a2.getSubordonnes() is @Nullable
		assertTrue(a2.getSubordonnes().size() == 2);
		                              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
21 errors
